Fixing animations on mobile + clean up

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,20 @@ header {
   transition: opacity 300ms;
 }
 
+@media (hover: hover) {
+  .num:hover {
+    background-color: rgb(64, 224, 208, 0.5);
+  }
+
+  .escape:hover {
+    background-color: rgb(255, 192, 203, 0.75);
+  }
+
+  .enter:hover {
+    background-color: rgb(144, 238, 144, 0.5);
+  }
+}
+
 .header-items.start {
   background-color: darkseagreen;
 }
@@ -255,31 +269,9 @@ main.correct {
   transition: scale 300ms;
 }
 
-.num:hover {
-  background-color: rgb(64, 224, 208, 0.5);
-
-  scale: 1.1;
-}
-
-.num:active {
-  background-color: rgb(64, 224, 208, 0.25);
-}
-
 .escape {
   grid-column: span 2;
   background-color: rgb(255, 192, 203);
-
-  transition: scale 300ms;
-}
-
-.escape:hover {
-  background-color: rgb(255, 192, 203, 0.75);
-
-  scale: 1.1;
-}
-
-.escape:active {
-  background-color: rgb(255, 192, 203, 0.5);
 }
 
 #zero {
@@ -290,21 +282,18 @@ main.correct {
   grid-row: span 3;
   background-color: rgb(144, 238, 144, 0.9);
 
-  transition: scale 300ms;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.enter:hover {
-  background-color: rgb(144, 238, 144, 0.5);
+.enter:active,
+.escape:active,
+.num:active {
+  opacity: 0.25;
 
-  scale: 1.1;
-}
-
-.enter:active {
-  background-color: rgb(144, 238, 144, 0.25);
+  scale: 1.3;
+  /* transition: scale 900ms; */
 }
 
 .summary-popup-container {
